packages/typ/tests/fixtures/diagnostics/0912_gadt_constructor_payload_bool_mismatch_06.ml.infer.expected
File "0912_gadt_constructor_payload_bool_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0912_gadt_constructor_payload_bool_mismatch_06 is not a valid module name.

File "0912_gadt_constructor_payload_bool_mismatch_06.ml", line 5, characters 36-37:
5 | let _ : bool expr_zeta = EBool_zeta 5
                                        ^
Error: The constant 5 has type int but an expression was expected of type
         bool
